[package]
name = "test_backend"
version = "0.1.0"
authors = ["Adam Drake <adrake@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "*"
serde = "*"
serde_derive = "*"
log = "*"
simple-error = "*"
simple_logger = "*"

[[bin]]
name = "bootstrap"
path = "src/main.rs"